春宵一刻值47千金

--- a/theme/css/local.css
+++ b/theme/css/local.css
@@ -55,7 +55,7 @@ div.article { padding-top: 20px; }
 div.article h2 { padding-bottom: 10px; }
 
 div.highlight pre {
-  background-color: #fefbf3;
+  background-color: #DEDDDB;
   margin: 0 0 10px;
 }
 
