--- a/theme/pygment.css
+++ b/theme/pygment.css
@@ -1,5 +1,9 @@
 pre { padding: 15px }
-img { max-width:500px }
+img { 
+    max-width:500px;
+    margin: auto;
+    display: block;
+}
 .highlight .hll { background-color: #49483e }
 .highlight  { background: #272822; color: #f8f8f2 }
 .highlight .c { color: #75715e } /* Comment */
